--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -11,6 +11,9 @@ build:
       platforms:
         - linux/amd64
         - linux/arm64
+  tagPolicy:
+    gitCommit:
+      ignoreChanges: true
   local:
     useBuildkit: true
 deploy:
