--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -32,7 +32,8 @@ jobs:
         uses: hiberbee/github-action-skaffold@1.27.0
         with:
           skaffold-version: 2.11.1
-          kubectl-version: 1.30
+          container-structure-test-version: 1.17.0
+          kubectl-version: 1.30.0
           command: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
