--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -32,8 +32,9 @@ jobs:
         uses: hiberbee/github-action-skaffold@1.27.0
         with:
           skaffold-version: 2.11.1
-          container-structure-test-version: 1.16.1
-          kubectl-version: 1.29.4
+          # not working to upgrade in the action...
+          # container-structure-test-version: 1.16.1
+          # kubectl-version: 1.29.4
           command: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
