--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,13 +2,18 @@
   commitBody: "Signed-off-by: Sebastian Gaiser <sebastiangaiser@users.noreply.github.com>",
   enabled: true,
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
-  labels: ["renovate"],
+  labels: [
+    "renovate"
+  ],
   extends: [
     "config:base"
   ],
   "pre-commit": {
     enabled: true
   },
+  postUpdateOptions: [
+    "gomodTidy"
+  ],
   rebaseWhen: "conflicted",
   semanticCommits: "enabled",
   timezone: "Europe/Berlin"
