--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Skaffold Github Action
         uses: hiberbee/github-action-skaffold@1.27.0
         with:
-          skaffold-version: 2.11.1
+          kubectl-version: 1.32.1
+          skaffold-version: 2.12.0
           # not working to upgrade in the action...
           # container-structure-test-version: 1.16.1
           # kubectl-version: 1.29.4
