--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Skaffold Github Action
         uses: hiberbee/github-action-skaffold@e3f5dd5659610cb792c6cf32daaa797ea6d89842 # 1.27.0
         with:
-          skaffold-version: 2.11.1
+          # renovate: datasource=github-releases depName=GoogleContainerTools/skaffold extractVersion=^v(?<version>.*)$
+          skaffold-version: 2.17.2
           # not working to upgrade in the action...
           # container-structure-test-version: 1.16.1
           # kubectl-version: 1.29.4
